Update tools & libraries projects to use JDK 8 when needed